# parallel-cut-pursuit

./: .gitlab-ci.yml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
include/: cp_d0_dist.hpp  cp_d1_lsx.hpp  cp_d1_ql1b.hpp  cp_kmpp_d0_dist.hpp  cp_pfdr_d1_lsx.hpp  cp_pfdr_d1_ql1b.hpp  cp_prox_tv.hpp  cut_pursuit.hpp  cut_pursuit_d0.hpp  cut_pursuit_d1.hpp  graph_tools.hpp  matrix_tools.hpp  maxflow.hpp  omp_num_threads.hpp  parallel_maxflow.hpp  pcd_fwd_doug_rach.hpp  pcd_prox_split.hpp  pfdr_d1_lsx.hpp  pfdr_d1_ql1b.hpp  pfdr_graph_d1.hpp  pfdr_prox_tv.hpp
octave/: compile_mex.m  compile_parallel_cut_pursuit_mex.m  example_EEG.m  example_labeling_3D.m  example_labeling_3D_d0.m  example_minimal_partition.m  example_prox_tv.m  example_tomography.m  tomography_ground_truth.eps  tomography_reconstruction.eps
octave/doc/: cp_d0_dist_mex.m  cp_d1_lsx.m  cp_kmpp_d0_dist_mex.m  cp_pfdr_d1_lsx_mex.m  cp_pfdr_d1_ql1b_mex.m  cp_prox_tv.m  cp_prox_tv_mex.m  forward_star_to_reverse_mex.m
python/: example_EEG.py  example_hierarchical_minimal_partition.py  example_labeling_3D.py  example_labeling_3D_d0.py  example_prox_tv.py  example_tomography.py  setup.py
src/: cp_d0_dist.cpp  cp_d1_lsx.cpp  cp_d1_ql1b.cpp  cp_kmpp_d0_dist.cpp  cp_maxflow.cpp  cp_pfdr_d1_lsx.cpp  cp_pfdr_d1_ql1b.cpp  cp_prox_tv.cpp  cut_pursuit.cpp  cut_pursuit_d0.cpp  cut_pursuit_d1.cpp  graph_tools.cpp  matrix_tools.cpp  maxflow.cpp  parallel_maxflow.cpp  pcd_fwd_doug_rach.cpp  pcd_prox_split.cpp  pfdr_d1_lsx.cpp  pfdr_graph_d1.cpp  pfdr_prox_tv.cpp  proj_simplex.cpp
(+31 files in other folders)
