[build-system]
requires = ["wheel", "setuptools", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pycut-pursuit"
version = "0.1.4"
readme = "README.md"
description = "cut pursuit algorithms"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Hugo Raguet", email = "hugo.raguet@insa-cvl.fr"},
  {name = "Loic Landrieu", email = "loic.landrieu@enpc.fr"}
]
maintainers = [
    {name = "Hugo Raguet", email = "hugo.raguet@insa-cvl.fr"}
]
keywords = ["point clouds", "features", "3D", "LiDAR"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering"
]

[project.urls]
homepage = "https://gitlab.com/1a7r0ch3/parallel-cut-pursuit"
repository = "https://gitlab.com/1a7r0ch3/parallel-cut-pursuit"

[tool.cibuildwheel]
build = "cp3{10,11,12,13}-*"
archs = ["auto64"] # limit to 64bits builds
